[package]
name = "axum_tonic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Use Tonic with Axum"
home-page = "https://github.com/jvdwrf/axum-tonic"
homepage = "https://github.com/jvdwrf/axum-tonic"
keywords = ["axum", "tonic", "interop", "grpc", "web"]
categories = ["web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "~0.6"
tonic = "~0.10"
hyper = "~0.14"
futures = "~0.3"
tower = "~0.4"

[build-dependencies]
tonic-build = "~0.10"

[dev-dependencies]
tokio = { version = "~1.32", features = ["full"] }
prost = "0.12.1"
http-body = "0.4.4"
tower-http = { version = "~0.4", features = [
    "compression-gzip",
    "cors",
    "compression-br",
    "compression-deflate",
    "trace",
] }
tracing-subscriber = "0.3.11"
